Fix jump when selecting body types.

--- a/app/styles/less/documentation.less
+++ b/app/styles/less/documentation.less
@@ -27,6 +27,10 @@
       display: inline-block;
       cursor: pointer;
     }
+
+    .named-parameters {
+      margin-top: -3px;
+    }
   }
 
   .named-parameters {
